--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "axios": "^0.18.1",
     "moment": "^2.24.0",
     "quasar": "^1.0.0",
-    "vue-uuid": "^1.1.1"
+    "vue-uuid": "^1.1.1",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0"
